# koreader

./: .busted  .codecov.yml  .codespellrc  .editorconfig  .emmyrc.json  .gitattributes  .gitignore  .gitmodules  .luacheckrc  .luacov  .luarc.json  .shellcheckrc  .travis.yml  AGENTS.md  Improvement suggestion  Makefile  README.TXT  README.md  afterupdate.marker  battery.lua  blitbuffer.c  blitbuffer.h  cache.lua  commands.lua  cre.cpp  cre.h  crereader.lua  datastorage.lua  defaults.lua  dialog.lua  djvu.c  djvu.h  djvureader.lua  document.lua  drawcontext.c  drawcontext.h  einkfb.c  einkfb.h  ev_replay.py  event.lua  (+74 more)
.agents/ADRs/: ADR-001-svg-with-embedded-json-metadata.md  ADR-002-strokebuffer-as-source-of-truth.md  ADR-003-dual-path-raw-evdev-plus-gesture-fallback.md  ADR-004-pressure-based-btn-touch-synthesis.md  ADR-005-per-page-undo-stack.md  ADR-006-uuid-directory-layout-for-notebooks.md  ADR-007-direct-to-master-no-prs.md
.agents/notes/: canvas-widget-gotchas.md  input-path-architecture.md  stroke-color-invariant.md  tech-debt.md  waveform-refresh-research.md
.agents/planning/: fastnote-dev-plan-v2.md  fastnote-landscape-research.md  pencil-koplugin-research.md
.agents/plans/: chunk2-quick-menu-color-pressure.md  chunk3-notebook-browser.md  color-drawing-fix-and-menu-access.md  color-pipeline-diagnosis-and-fix.md  color-wfm-capture-runbook.md  eraser-capture-runbook.md  grayscale-ink-and-eraser-handoff.md  live-color-refresh-and-eraser-hardening.md  skills-instructions-best-practices-remediation.md
.ci/: after_success.sh  after_success_docs_translation.sh  before_install.sh  build.sh  check.sh  common.sh  docs.sh  fetch.sh  github_after_success.sh  helper_luarocks.sh  helper_shellchecks.sh  install.sh  koreader_doc.enc  script.sh  test.sh
.circleci/: config.yml
.claude/skills/: agents-md-authoring  authoring-instructions-and-skills  (+2 more)
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md
android/: llapp_main.lua
doc/: Bug_report.md  Building.md  Building_targets.md  Collaborating with Git.md  Collaborating_with_Git.md  DataStore.md  Development guide.md  Development_guide.md  Events.md  Feature_request.md  Hacking.md  Makefile  PanelNavigation.md  Porting.md  Pull_request.md  Unit tests.md  Unit_tests.md  config.ld  events.lua  plugin_compatibility.md
docs/: arrow-key-page-turning.md  macos-wifi-fix.md
frontend/: JSON.lua  MD5.lua  alt_getopt.lua  cache.lua  cacheitem.lua  cachesqlite.lua  configurable.lua  datetime.lua  dbg.lua  depgraph.lua  device.lua  dispatcher.lua  docsettings.lua  dump.lua  extsettings.lua  fontlist.lua  gettext.lua  httpclient.lua  languagesupport.lua  livepatch.lua  logfile.lua  logger.lua  luadata.lua  luadefaults.lua  luasettings.lua  lulip.lua  luxl.lua  math.lua  memutils.lua  natsort.lua  optmath.lua  persist.lua  plugincompatibility.lua  plugincompatibilitysettings.lua  plugindefs.lua  pluginloader.lua  pluginshare.lua  profiler.lua  provider.lua  qrencode.lua  (+14 more)
include/: README  einkfb.h  mxcfb.h
kindle/: koreader.sh  kotar_cpoint  libkohelper.sh  libkoreader.inc
kite/: KPDFviewer (last file)  KPDFviewer File Manager
kobo/: crashfix.sh  koreader.sh  koreader_kobo.sh  nickel.sh  suspend  suspend.sh  suspend2  wifi.sh
kpvcrlib/: CMakeLists.txt  cr3.css  jpeg_compress_struct_size.patch  jpeg_decompress_struct_size.patch  lvdocview-getCurrentPageLinks.patch  lvrend_node_type_face.patch
l10n/: Makefile  README.md
launchpad/: kpdf.ini  kpdf.sh
make/: android.mk  appimage.mk  cervantes.mk  debian.mk  emulator.mk  gettext.mk  kindle.mk  kindlehf.mk  kindlepw2.mk  kobo.mk  kobov4.mk  linux.mk  macos.mk  pocketbook.mk  remarkable-aarch64.mk  remarkable.mk  sony-prstux.mk  ubuntu-touch.mk
metadata/: README.md
patches/: 2-01-dict-popup-custom.lua  2-02-dict-remove-vocab-button.lua  2-mosaic-mode-grid.lua.disabled
popen-noshell/: Makefile  README  popen_noshell-buildfix.patch  popen_noshell.c  popen_noshell.h
scripts/: empty-crashlog.sh  startup-script.sh  tail-crashlog.sh  update-patterns.once.sh  update-patterns.update.sh
spec/: autofrontlight_spec.lua
test/: djvu3spec.djvu  juliet.epub  leaves.epub  sample.txt
tools/: benchmark.lua  graph_memory.sh  ja_keyboard_generate.py  ja_keyboard_generate_modifiers.py  kobo_touch_probe.lua  logcat.py  merge_luacov_stats.lua  merge_syn.py  mk7z.sh  mkrelease.sh  shell.nix  trace_require.lua  update-metadata.lua  valgrind_amd.supp  wbuilder.lua  zipsync.lua
utils/: kobo_touch_probe.lua  kobo_touch_proble.lua  pdfattach  trace_require.lua  wbuilder.lua  wtest.lua
(+1413 files in other folders)
